Support chart series per single resource in workers.get_stats

--- a/apiserver/config/default/services/workers.conf
+++ b/apiserver/config/default/services/workers.conf
@@ -3,3 +3,7 @@ default_cluster_timeout_sec: 600
 
 # The minimal sampling interval for resource dashboard and worker activity charts
 min_chart_interval_sec: 40
+
+stats {
+    max_metrics_concurrency: 4
+}
