--- a/apiserver/schema/services/workers.conf
+++ b/apiserver/schema/services/workers.conf
@@ -15,6 +15,26 @@ _definitions {
             }
         }
     }
+    worker_stat_key {
+        type: string
+        enum: [
+            cpu_usage
+            cpu_temperature
+            memory_used
+            memory_free
+            gpu_usage
+            gpu_temperature
+            gpu_fraction
+            gpu_memory_free
+            gpu_memory_used
+            network_tx
+            network_rx
+            disk_free_home
+            disk_free_temp
+            disk_read
+            disk_write
+        ]
+    }
     aggregation_type {
         type: string
         enum: [ avg, min, max ]
@@ -23,8 +43,7 @@ _definitions {
     stat_item {
         type: object
         properties {
-            key {
-                type: string
+            key: ${_definitions.worker_stat_key} {
                 description: "Name of a metric"
             }
             category {
@@ -37,6 +56,30 @@ _definitions {
         properties {
             aggregation {
                 "$ref": "#/definitions/aggregation_type"
+            }
+            dates {
+                type: array
+                description: "List of timestamps (in seconds from epoch) in the acceding order. The timestamps are separated by the requested interval. Timestamps where no workers activity was recorded are omitted."
+                items { type: integer }
+            }
+            values {
+                type: array
+                description: "List of values corresponding to the dates in metric statistics"
+                items { type: number }
+            }
+            resource_series {
+                type: array
+                description: "Metric data per single resource. Return only if split_by_resource request parameter is set to True"
+                items {"$ref": "#/definitions/metric_resource_series"}
+            }
+        }
+    }
+    metric_resource_series {
+        type: object
+        properties {
+            name {
+                type: string
+                description: Resource name
             }
             values {
                 type: array
@@ -55,11 +98,6 @@ _definitions {
             variant {
                 type: string
                 description: "Name of the metric component. Set only if 'split_by_variant' was set in the request"
-            }
-            dates {
-                type: array
-                description: "List of timestamps (in seconds from epoch) in the acceding order. The timestamps are separated by the requested interval. Timestamps where no workers activity was recorded are omitted."
-                items { type: integer }
             }
             stats {
                 type: array
@@ -479,6 +517,20 @@ get_stats {
                     description: "List of the requested workers with their statistics"
                     items { "$ref": "#/definitions/worker_stats" }
                 }
+            }
+        }
+    }
+    "2.32": ${get_stats."2.4"} {
+        request.properties {
+            split_by_variant {
+                description: "Obsolete, please do not use"
+                type: boolean
+                default: false
+            }
+            split_by_resource {
+                type: boolean
+                default: false
+                description: If set then for GPU related keys return the per GPU charts in addition to the aggregated one
             }
         }
     }
