--- a/apiserver/config/default/apiserver.conf
+++ b/apiserver/config/default/apiserver.conf
@@ -41,6 +41,7 @@
         # controls whether FieldDoesNotExist exception will be raised for any extra attribute existing in stored data
         # but not declared in a data model
         strict: false
+        ensure_db_version_on_startup: true
     }
 
     elastic {
