--- a/apiserver/config/default/apiserver.conf
+++ b/apiserver/config/default/apiserver.conf
@@ -2,8 +2,8 @@
     watch: false            # Watch for changes (dev only)
     debug: false            # Debug mode
     pretty_json: false      # prettify json response
-    return_stack: true      # return stack trace on error
-    return_stack_to_caller: true # top-level control on whether to return stack trace in an API response
+    return_stack: false      # return stack trace on error
+    return_stack_to_caller: false # top-level control on whether to return stack trace in an API response
 
     # if 'return_stack' is true and error contains a status code, return stack trace only for these status codes
     # valid values are:
