Remove example S3 credentials

--- a/apiserver/config/default/services/storage_credentials.conf
+++ b/apiserver/config/default/services/storage_credentials.conf
@@ -15,15 +15,15 @@ aws {
             #     key: "my-access-key"
             #     secret: "my-secret-key"
             # },
-            {
-                # This will apply to all buckets in this host (unless key/value is specifically provided for a given bucket)
-                host: "localhost:9000"
-                key: "minioadmin"
-                secret: "minioadmin"
-                # region: my-server
-                multipart: false
-                secure: false
-            }
+//            {
+//                # This will apply to all buckets in this host (unless key/value is specifically provided for a given bucket)
+//                host: "localhost:9000"
+//                key: "minioadmin"
+//                secret: "minioadmin"
+//                # region: my-server
+//                multipart: false
+//                secure: false
+//            }
         ]
     }
 }
