--- a/apiserver/apierrors/errors.conf
+++ b/apiserver/apierrors/errors.conf
@@ -110,7 +110,7 @@
     # Serving
     1050: ["invalid_container_id", "invalid container id"]
     1051: ["container_not_registered", "container is not registered"]
-    1052: ["no_containers_for_url", "no container instances found for serice url"]
+    1052: ["no_containers_for_url", "no container instances found for service url"]
 
     1104: ["invalid_scroll_id", "Invalid scroll id"]
 }
