--- a/apiserver/config/default/apiserver.conf
+++ b/apiserver/config/default/apiserver.conf
@@ -86,7 +86,7 @@
 #        }
 
 #        # A list of fixed users
-#        # Note: password may be bcrypt-hashed (generate using `python -c 'import bcrypt; print(bcrypt.hashpw("password", bcrypt.gensalt()))'`)
+#        # Note: password may be base64-encoded bcrypt-hashed (generate using `python -c 'import bcrypt,base64; print(base64.b64encode(bcrypt.hashpw("password".encode(), bcrypt.gensalt())))'`)
 #        fixed_users {
 #            enabled: true
 #            pass_hashed: false
