--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -53,6 +53,7 @@ services:
       node.name: clearml
       reindex.remote.whitelist: "'*.*'"
       xpack.security.enabled: "false"
+      path.repo: /usr/share/elasticsearch/backup
     ulimits:
       memlock:
         soft: -1
