parameterized fileserver port

--- a/fileserver/config/default/fileserver.conf
+++ b/fileserver/config/default/fileserver.conf
@@ -1,30 +1,39 @@
-download {
-    # Add response headers requesting no caching for served files
-    disable_browser_caching: false
+{
+    debug: false            # Debug mode
+    
+    listen {
+        ip : "0.0.0.0"
+        port: 8081
+    }
 
-    # Cache timeout to be set for downloaded files
-    cache_timeout_sec: 300
-}
+    download {
+        # Add response headers requesting no caching for served files
+        disable_browser_caching: false
 
-delete {
-    allow_batch: true
-}
+        # Cache timeout to be set for downloaded files
+        cache_timeout_sec: 300
+    }
 
-upload {
-    # the max size in Mb of the upload contents in one upload call
-    max_upload_size_mb: 0
-}
+    delete {
+        allow_batch: true
+    }
 
-cors {
-    origins: "*"
-}
+    upload {
+        # the max size in Mb of the upload contents in one upload call
+        max_upload_size_mb: 0
+    }
 
-auth {
-    # enable/disable auth validation on upload/download
-    enabled: true
+    cors {
+        origins: "*"
+    }
 
-    # names of cookies in which authorization token can be found
-    cookie_names: ["clearml_token_basic"]
+    auth {
+        # enable/disable auth validation on upload/download
+        enabled: true
 
-    tokens_cache_threshold_sec: 43200
+        # names of cookies in which authorization token can be found
+        cookie_names: ["clearml_token_basic"]
+
+        tokens_cache_threshold_sec: 43200
+    }
 }
