Fix check for "." in key in users.set_preferences Add an option not to return the updates user preferences

--- a/apiserver/schema/services/users.conf
+++ b/apiserver/schema/services/users.conf
@@ -404,11 +404,18 @@ set_preferences {
                     type: integer
                 }
                 fields {
-                    description: Updated fields names and values
+                    description: If the preferences were updated successfully then return the updated preferences
                     type: object
                     additionalProperties: true
                 }
             }
+        }
+    }
+    "999.0": ${set_preferences."2.1"} {
+        request.properties.return_updated {
+            description: If set to 'true' and update was succcessful then return updated preferences
+            type: boolean
+            default: true
         }
     }
 }
