Update server API version

--- a/apiserver/schema/services/server.conf
+++ b/apiserver/schema/services/server.conf
@@ -11,7 +11,7 @@ get_stats {
             properties {
                 interval {
                     description: "The period for statistics collection in seconds."
-                    type: long
+                    type: integer
                 }
             }
         }
