Add limit parameter to organization.get_entities_count

--- a/apiserver/schema/services/organization.conf
+++ b/apiserver/schema/services/organization.conf
@@ -229,6 +229,14 @@ get_entities_count {
             }
         }
     }
+    "2.33": ${get_entities_count."2.23"} {
+        request.properties {
+            limit {
+                type: integer
+                description: If specified then items only up to this limit are counted
+            }
+        }
+    }
 }
 prepare_download_for_get_all {
     "2.26": {
