Add support for pipeline_runs and dataset_versions in organization.get_entities_count

--- a/apiserver/schema/services/organization.conf
+++ b/apiserver/schema/services/organization.conf
@@ -162,10 +162,20 @@ get_entities_count {
                     additionalProperties: true
                     description: Search criteria for pipelines
                 }
+                pipeline_runs {
+                    type: object
+                    additionalProperties: true
+                    description: Search criteria for pipeline runs
+                }
                 datasets {
                     type: object
                     additionalProperties: true
                     description: Search criteria for datasets
+                }
+                dataset_versions {
+                    type: object
+                    additionalProperties: true
+                    description: Search criteria for dataset versions
                 }
             }
         }
@@ -188,9 +198,17 @@ get_entities_count {
                     type: integer
                     description: The number of pipelines matching the criteria
                 }
+                pipeline_runs {
+                    type: integer
+                    description: The number of pipeline runs matching the criteria
+                }
                 datasets {
                     type: integer
                     description: The number of datasets matching the criteria
+                }
+                dataset_versions {
+                    type: integer
+                    description: The number of dataset versions matching the criteria
                 }
             }
         }
