Optimize project statistics queries

--- a/apiserver/schema/services/projects.conf
+++ b/apiserver/schema/services/projects.conf
@@ -539,7 +539,7 @@ get_all_ex {
                     default: false
                 }
                 stats_for_state {
-                    description: "Report stats include only statistics for tasks in the specified state. If Null is provided, stats for all task states will be returned."
+                    description: "Obsolete! Statistics is calculated always for the 'active' state"
                     type: string
                     enum: [ active, archived ]
                     default: active
