--- a/apiserver/requirements.txt
+++ b/apiserver/requirements.txt
@@ -5,6 +5,7 @@ boltons>=19.1.0
 boto3>=1.26
 boto3-stubs[s3]>=1.26
 clearml>=1.10.3
+clearml-agent>=1.5.2
 dpath>=1.4.2,<2.0
 elasticsearch==8.17.0
 fastjsonschema>=2.8
