Support Parallel execution of queries in get_entities_count

--- a/apiserver/config/default/services/organization.conf
+++ b/apiserver/config/default/services/organization.conf
@@ -7,3 +7,7 @@ download {
     max_download_items: 50000
     max_project_name_length: 60
 }
+
+# the maximum amount of pool workers to use for performing parallel queries
+# in get_entities_count call. 0 means sequential
+max_entities_count_concurrency: 4
