--- a/apiserver/schema/services/organization.conf
+++ b/apiserver/schema/services/organization.conf
@@ -255,6 +255,23 @@ get_entities_count {
             }
         }
     }
+    "999.0": ${get_entities_count."2.33"} {
+        response.properties {
+            errors {
+                type: object
+                properties {
+                    projects { type: string }
+                    tasks { type: string }
+                    models { type: string }
+                    pipelines { type: string }
+                    pipeline_runs { type: string }
+                    datasets { type: string }
+                    dataset_versions { type: string }
+                    reports { type: string}
+                }
+            }
+        }
+    }
 }
 prepare_download_for_get_all {
     "2.26": {
