Add tasks.edit_runtime API

--- a/apiserver/schema/services/tasks.conf
+++ b/apiserver/schema/services/tasks.conf
@@ -492,6 +492,44 @@ clone {
         }
     }
 }
+edit_runtime {
+    "999.0" {
+        description: "Edit task's runtime properties by adding, updating or removing existing fields"
+        request {
+            type: object
+            required: [task]
+            properties {
+                task {
+                    description: "Task ID"
+                    type: string
+                }
+                add_or_update {
+                    description: "Runtime properties to be updated or added (key/value)"
+                    type: object
+                    additionalProperties { type: string }
+                }
+                remove {
+                    description: "Runtime properties to be removed (list of keys)"
+                    type: array
+                    items { type: string }
+                }
+                force {
+                    description: "If set to 'true' then both new and running task runtime can be edited. Otherwise only the new task ones. Default is 'false'"
+                    type: boolean
+                }
+            }
+        }
+        response {
+            type: object
+            properties {
+                updated {
+                    description: "Indicates if the task was updated successfully"
+                    type: integer
+                }
+            }
+        }
+    }
+}
 add_or_update_model {
     "2.13" {
         description: "Add or update task model"
