--- a/apiserver/config/default/services/queues.conf
+++ b/apiserver/config/default/services/queues.conf
@@ -5,4 +5,9 @@
     # the queues with these tags will not be returned from get_all/get_all_ex unless id or name specified
     # or search_hidden is set
     hidden_tags: [k8s-glue]
+
+    resource_usages: {
+        cpu: 1.0
+        gpu: 1.0
+    }
 }
